--- a/mywebsite/styles/styles.css
+++ b/mywebsite/styles/styles.css
@@ -323,7 +323,7 @@ body {
 }
 
 .navbar {
-  background-color: #440A67;
+  background-color: #262626;
 }
 
 .navbar--item {
@@ -448,8 +448,36 @@ body {
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   font-size: 1.75rem;
-  -webkit-animation: color-change-5x 15s infinite;
-          animation: color-change-5x 15s infinite;
+  height: 100%;
+  background-color: #440a67;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23a6f6f1'/%3E%3Cstop offset='1' stop-color='%23440a67'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%237580ac'/%3E%3Cstop offset='1' stop-color='%23440a67'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='translate(960 0)'%3E%3Cg transform='translate(0 225)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-280.8 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.project-card {
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 1.3rem;
+  width: 80%;
+  margin: 1rem 0rem 1rem 0;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  font-size: 1.2rem;
+  color: #2C2E43;
+  text-shadow: none;
+  -webkit-box-shadow: -0.5rem 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
+          box-shadow: -0.5rem 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.project-card:hover {
+  -webkit-box-shadow: 0rem 0.9rem 0.4rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0rem 0.9rem 0.4rem rgba(0, 0, 0, 0.5);
+  -webkit-transform: translate(0.4rem, -1rem);
+          transform: translate(0.4rem, -1rem);
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .ms-header {
@@ -683,5 +711,77 @@ body {
 [type="checkbox"] + .check-label .face .mouth {
   -webkit-animation: changeMouthReverse forwards 0.3s;
   animation: changeMouthReverse forwards 0.3s;
+}
+
+.social-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+}
+
+.social-menu i {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-size: 25px;
+  margin-right: 10px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.social-menu i:before {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social-menu a {
+  text-decoration: none;
+}
+
+.fa-github {
+  background: #3b5998;
+}
+
+.fa-linkedin {
+  background: #007bb6;
+}
+
+.fa-twitter {
+  background: #00aced;
+}
+
+.fa-envelope {
+  background: #3f729b;
+}
+
+.fa-youtube {
+  background: #c4302b;
+}
+
+.social-menu i:hover {
+  opacity: .7;
+  border-radius: 0;
+}
+
+footer {
+  padding: 3rem;
+  font-size: 1.5rem;
+  font-weight: 900;
 }
 /*# sourceMappingURL=styles.css.map */
